{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 148,
  "lineage": "90cdae36-1728-c446-e589-d288b51aab4a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d56f8956ab235b3",
            "arn": "arn:aws:ec2:us-east-1:116464412061:instance/i-01363dc92e02e46bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01363dc92e02e46bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "wearslot",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6b8477d8be4aa9f",
            "private_dns": "ip-10-0-2-96.ec2.internal",
            "private_ip": "10.0.2.96",
            "public_dns": "ec2-54-167-233-120.compute-1.amazonaws.com",
            "public_ip": "54.167.233.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0344f6185549011aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02519d7e0d9abab2c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e62519cd707db3a",
            "tags": {
              "Name": "Wearslot"
            },
            "tags_all": {
              "Name": "Wearslot"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02519d7e0d9abab2c"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.wearslot",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:network-interface/eni-026fac10356b0130a",
            "id": "eni-026fac10356b0130a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:32:91:74:a1:d7",
            "owner_id": "116464412061",
            "private_dns_name": "ip-10-0-0-98.ec2.internal",
            "private_ip": "10.0.0.98",
            "private_ip_list": [
              "10.0.0.98"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.98"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02519d7e0d9abab2c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4b4e2394aeb893a",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.wearslot",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116464412061:loadbalancer/app/wslt-default-lb/e0387a0915ea1533",
            "arn_suffix": "app/wslt-default-lb/e0387a0915ea1533",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wslt-default-lb-868838125.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:116464412061:loadbalancer/app/wslt-default-lb/e0387a0915ea1533",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wslt-default-lb",
            "security_groups": [
              "sg-02519d7e0d9abab2c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e62519cd707db3a"
              },
              {
                "subnet_id": "subnet-05d849d5824ea7bd0"
              }
            ],
            "subnets": [
              "subnet-00e62519cd707db3a",
              "subnet-05d849d5824ea7bd0"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-071b7b1f2c9ad65ab",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.wearslot",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116464412061:listener/app/wslt-default-lb/e0387a0915ea1533/6a3e2b7ef17ccbff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:116464412061:targetgroup/wslt-default-lb-target-group/72e7ddf1da5eebdf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116464412061:listener/app/wslt-default-lb/e0387a0915ea1533/6a3e2b7ef17ccbff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:116464412061:loadbalancer/app/wslt-default-lb/e0387a0915ea1533",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.wearslot",
            "module.ecs.aws_alb_target_group.wearslot",
            "module.vpc.aws_security_group.wearslot",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116464412061:targetgroup/wslt-default-lb-target-group/72e7ddf1da5eebdf",
            "arn_suffix": "targetgroup/wslt-default-lb-target-group/72e7ddf1da5eebdf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116464412061:targetgroup/wslt-default-lb-target-group/72e7ddf1da5eebdf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wslt-default-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wearslot"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b308864fcc67480",
            "association_id": "eipassoc-043f02d6cba643f24",
            "domain": "vpc",
            "id": "eipalloc-02b308864fcc67480",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0041c9ea8d9a0575e",
            "private_dns": "ip-10-0-2-143.ec2.internal",
            "private_ip": "10.0.2.143",
            "public_dns": "ec2-3-222-108-150.compute-1.amazonaws.com",
            "public_ip": "3.222.108.150",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.wearslot",
            "module.vpc.aws_vpc.wearslot"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa738f335885e9fa",
            "association_id": "eipassoc-05c4ddf51036c697a",
            "domain": "vpc",
            "id": "eipalloc-0aa738f335885e9fa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06666536276f8b0f3",
            "private_dns": "ip-10-0-3-75.ec2.internal",
            "private_ip": "10.0.3.75",
            "public_dns": "ec2-3-232-137-143.compute-1.amazonaws.com",
            "public_ip": "3.232.137.143",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.wearslot",
            "module.vpc.aws_vpc.wearslot"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:internet-gateway/igw-0b0213e2830850cd8",
            "id": "igw-0b0213e2830850cd8",
            "owner_id": "116464412061",
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wearslot"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b308864fcc67480",
            "connectivity_type": "public",
            "id": "nat-0b057863edf9779e4",
            "network_interface_id": "eni-0041c9ea8d9a0575e",
            "private_ip": "10.0.2.143",
            "public_ip": "3.222.108.150",
            "subnet_id": "subnet-00e62519cd707db3a"
          },
          "dependencies": [
            "module.vpc.aws_eip.wearslot",
            "module.vpc.aws_internet_gateway.wearslot",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa738f335885e9fa",
            "connectivity_type": "public",
            "id": "nat-0a2bee747c750cca8",
            "network_interface_id": "eni-06666536276f8b0f3",
            "private_ip": "10.0.3.75",
            "public_ip": "3.232.137.143",
            "subnet_id": "subnet-05d849d5824ea7bd0"
          },
          "dependencies": [
            "module.vpc.aws_eip.wearslot",
            "module.vpc.aws_internet_gateway.wearslot",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b0213e2830850cd8",
            "id": "r-rtb-008de0bc52641ddbf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008de0bc52641ddbf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.wearslot",
            "module.vpc.aws_route_table.wearslot",
            "module.vpc.aws_vpc.wearslot"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:route-table/rtb-0f0eb0d63c82ba3a1",
            "id": "rtb-0f0eb0d63c82ba3a1",
            "owner_id": "116464412061",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b057863edf9779e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.wearslot",
            "module.vpc.aws_internet_gateway.wearslot",
            "module.vpc.aws_nat_gateway.wearslot",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:route-table/rtb-067663bd01cc8d527",
            "id": "rtb-067663bd01cc8d527",
            "owner_id": "116464412061",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2bee747c750cca8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.wearslot",
            "module.vpc.aws_internet_gateway.wearslot",
            "module.vpc.aws_nat_gateway.wearslot",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:route-table/rtb-008de0bc52641ddbf",
            "id": "rtb-008de0bc52641ddbf",
            "owner_id": "116464412061",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0213e2830850cd8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.wearslot"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wslt-route-table-assoc-pubs1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031710acddac2290f",
            "route_table_id": "rtb-008de0bc52641ddbf",
            "subnet_id": "subnet-00e62519cd707db3a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.wearslot",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f3d5ef89b5663c9",
            "route_table_id": "rtb-008de0bc52641ddbf",
            "subnet_id": "subnet-05d849d5824ea7bd0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.wearslot",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:security-group/sg-02519d7e0d9abab2c",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02519d7e0d9abab2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Enabling port for ssh connection",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220618220843377500000002",
            "name_prefix": "terraform-",
            "owner_id": "116464412061",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.wearslot"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wearslot_ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:security-group/sg-016bd1617aad615e2",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016bd1617aad615e2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02519d7e0d9abab2c"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "wearslot-ecs-tasks",
            "name_prefix": "",
            "owner_id": "116464412061",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.wearslot",
            "module.vpc.aws_vpc.wearslot"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:subnet/subnet-0e4b4e2394aeb893a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4b4e2394aeb893a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116464412061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:subnet/subnet-07812ea71daac78bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07812ea71daac78bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116464412061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:subnet/subnet-00e62519cd707db3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e62519cd707db3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116464412061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:subnet/subnet-05d849d5824ea7bd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d849d5824ea7bd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116464412061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-071b7b1f2c9ad65ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wearslot",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wearslot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116464412061:vpc/vpc-071b7b1f2c9ad65ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cac1945a2a90a932",
            "default_route_table_id": "rtb-0e053754aa08e15a2",
            "default_security_group_id": "sg-00da9432a74f8fc09",
            "dhcp_options_id": "dopt-0a5febccd626a0e14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-071b7b1f2c9ad65ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e053754aa08e15a2",
            "owner_id": "116464412061"
          }
        }
      ]
    }
  ]
}